objects/SBQQ__BlockPrice__c.object
<CustomObject>
    <customHelpPage>SBQQ__BlockPriceHelp</customHelpPage>
    <description>Price for a block quantity of the parent product.</description>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>Lower bound of the quantity range for this block price.</description>
        <inlineHelpText>Lower bound of the quantity range for this block price.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <description>Price for the parent product in specified quantity range.</description>
        <inlineHelpText>Price for the parent product in specified quantity range.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which block pricing applies.</description>
        <inlineHelpText>Select the product that should receive block pricing when applicable.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <description>Upper bound of the quantity range for this block price.</description>
        <inlineHelpText>Upper bound of the quantity range for this block price.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Block Price</label>
    <listViews>
        <fullName>Panel1_BlockPrice</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Block Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>